--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ dj-static==0.0.6
 Django==1.9.4
 django-markdown-deux==1.0.5
 gunicorn==19.7.1
+Markdown==2.6.9
 markdown2==2.3.4
 psycopg2==2.7.3
+pytz==2017.2
 static3==0.7.0
